// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with custom alt 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <img
      alt="My avatar"
      class="cache-1kzq5ms e1frqeh80"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with custom background color 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-t4e693 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <div
      class="cache-t4e693 e1frqeh81"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with custom text color 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-lme662 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <div
      class="cache-lme662 e1frqeh81"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <img
      alt="Avatar"
      class="cache-1kzq5ms e1frqeh80"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with image 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <img
      alt="Avatar"
      class="cache-1kzq5ms e1frqeh80"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with image and alt 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <img
      alt="Support"
      class="cache-1kzq5ms e1frqeh80"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with lock 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-ha24km {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #d4dae7;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

.cache-makwam {
  fill: #b2b6c3;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-makwam.cache-makwam {
  vertical-align: middle;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <div
      aria-label="locked"
      class="cache-wxe7fo e1frqeh81"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-makwam e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with sentence 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-1am9adn {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <div
      class="cache-1am9adn e1frqeh81"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with size 1`] = `
<DocumentFragment>
  .cache-cywuei.cache-cywuei {
  width: 48px;
  height: 48px;
  position: relative;
}

.cache-1kzq5ms {
  height: 100%;
  width: 100%;
}

<div
    class="cache-cywuei e7ah3bn0"
  >
    <img
      alt="Avatar"
      class="cache-1kzq5ms e1frqeh80"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with small text 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-1am9adn {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <div
      class="cache-1am9adn e1frqeh81"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-1am9adn {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #fff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <div
      class="cache-1am9adn e1frqeh81"
    >
      HE
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text and custom style 1`] = `
<DocumentFragment>
  .cache-ua3jbc.cache-ua3jbc {
  width: 32px;
  height: 32px;
  position: relative;
}

.cache-6jj1vw {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: red;
  border-radius: 50%;
  color: white;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-ua3jbc e7ah3bn0"
  >
    <div
      class="cache-4iifzb e1frqeh81"
    >
      HW
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text size 1`] = `
<DocumentFragment>
  .cache-nt716f.cache-nt716f {
  width: 50px;
  height: 50px;
  position: relative;
}

.cache-bpwuh7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #fff;
  font-size: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-nt716f e7ah3bn0"
  >
    <div
      class="cache-bpwuh7 e1frqeh81"
    >
      HE
    </div>
  </div>
</DocumentFragment>
`;
